# MPAS-Model-CI

./: .gitignore  Makefile  README.md
.github/: AGENT_GUIDE.md  ci-config.env  copilot-instructions.md
.github/actions/build-mpas/: action.yml
.github/actions/download-testdata/: action.yml
.github/actions/ect-summary/: action.yml
.github/contributors-sync/: README.md  generate_ci_docs.py  sync-docs.yml
.github/docs/: iss-talk-slide-outline.md  mpas-ci-summary-for-noaa.md  testing-upstream-commits.md
.github/linting/: fortitude_config.toml
.github/scripts/: compare-bfb-nc.py  install-nsight-systems-cli.sh  resolve-nsys.sh  run-nsys-profile.sh
.github/workflows/: _resolve-nvhpc-containers.yml  _test-bfb.yml  _test-compiler.yml  _test-gpu.yml  bfb-decomp-gpu.yml  bfb-decomp.yml  bfb-io-gpu.yml  bfb-io.yml  bfb-nvhpc-cpu-vs-gpu.yml  compile-nvhpc-cuda-mpich.yml  coverage.yml  ect-ensemble-gen.yml  ect-test.yml  fortran-linting.yml  profile-gpu-nsight.yml  stub-manual-smoke.yml  test-cirrus-nvhpc.yml  test-cross-repo.yml  test-ga-nogpu.yml  test-gcc-mpich.yml  test-gcc-openmpi.yml  test-gcc.yml  test-gpu-mpich.yml  test-gpu-openmpi.yml  test-gpu.yml  test-intel-mpich.yml  test-intel-openmpi.yml  test-intel.yml  test-nvhpc-mpich.yml  test-nvhpc-openmpi.yml  test-nvhpc.yml  unit-tests.yml
docs/: ci-template-notes.md  ci-workflow-map.md
src/: Makefile
src/core_atmosphere/: Registry.xml  mpas_atm_core.F  mpas_atm_core_interface.F
src/core_init_atmosphere/: Registry.xml  mpas_atm_advection.F  mpas_init_atm_cases.F
src/core_test/: Makefile
src/framework/: Makefile  mpas_block_decomp.F  mpas_halo.F
src/operators/: mpas_vector_reconstruction.F
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_spline_interpolation.pf
(+24 files in other folders)
